Added info and dependancies

--- a/package.json
+++ b/package.json
@@ -16,4 +16,16 @@
   	"min_height": 600
   },
   "node-remote": "http://localhost:3000"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:brannondorsey/ProbeKit.git"
+  },
+  "dependencies": {
+    "minimist": "",
+    "express": "",
+    "socket.io": "",
+    "moment": "",
+    "pcap": ""
+  }
 }
